==> MoseychukA/FLARM_ALL/MAIN_S/Исходники/FlyRf24_08_10_000/LPC43.cpp <==
#include "TimeRF.h"
#include "LED.h"
#include "GNSS.h"
#include "RF.h"
#include "Sound.h"
#include "EEPROMRF.h"
#include "BatteryRF.h"
#include "GDL90.h"
#include "NMEA.h"
#include "D1090.h"
#include "SoC.h"
#include "Baro.h"
#include "TrafficHelper.h"
#include "JSON.h"
#include "Bluetooth.h"
#include "OLED.h"
#include "Adafruit_USBD_Device.h"
#include "Uart.h"

static void LPC43_post_init()
{
  Serial.println();
  Serial.print(LPC43_Device_Manufacturer); Serial.print(' ');
  Serial.print(LPC43_Device_Model); Serial.println(" Power-on Self Test");
//  Serial.println("SoftRF ES Edition Power-on Self Test");
  Serial.println();
  SERIAL_FLUSH();

  Serial.print(F("GNSS    : "));
  Serial.println(hw_info.gnss    != GNSS_MODULE_NONE  ? F("PASS") : F("N/A"));
  Serial.print(F("BARO    : "));
  Serial.println(hw_info.baro    != BARO_MODULE_NONE  ? F("PASS") : F("N/A"));
  Serial.print(F("DISPLAY : "));
  Serial.println(hw_info.display != DISPLAY_NONE      ? F("PASS") : F("N/A"));

  Serial.println();
  Serial.println(F("Power-on Self Test is complete."));
  Serial.println();
  SERIAL_FLUSH();

  Serial.println(F("Data output device(s):"));

  Serial.print(F("NMEA   - "));
  Serial.println(settings->nmea_out == NMEA_UART ? F("UART")    :
                 settings->nmea_out == NMEA_USB  ? F("USB CDC") :
                                                   F("NULL"));
  Serial.print(F("GDL90  - "));
  Serial.println(settings->gdl90 == GDL90_UART  ? F("UART")    :
                 settings->gdl90 == GDL90_USB   ? F("USB CDC") :
                                                  F("NULL"));
  Serial.print(F("D1090  - "));
  Serial.println(settings->d1090 == D1090_UART  ? F("UART")    :
                 settings->d1090 == D1090_USB   ? F("USB CDC") :
                                                  F("NULL"));
  Serial.println();
  SERIAL_FLUSH();

#if defined(USE_OLED)
  OLED_info1();
#endif /* USE_OLED */
}

static void LPC43_reset()
{
  system_reset(RESET_REASON_SOFT_RESET, true);
}

static uint32_t LPC43_getChipId()
{
  return DevID_Mapper(LPC43_Device_ID);
}

static String LPC43_getResetReason()
{
  return (String) system_get_reset_reason_string();
}

static uint32_t LPC43_getFreeHeap()
{
  char top;
  return &top - reinterpret_cast<char*>(_sbrk(0));
}

static void LPC43_EEPROM_extension(int cmd)
{
  if (cmd == EEPROM_EXT_LOAD) {
    settings->mode        = SOFTRF_MODE_NORMAL;
    settings->rf_protocol = RF_PROTOCOL_ADSB_1090;
    settings->txpower     = RF_TX_POWER_OFF;

    if ( settings->nmea_out == NMEA_BLUETOOTH ||
         settings->nmea_out == NMEA_UDP       ||
         settings->nmea_out == NMEA_TCP       ||
        (settings->nmea_out == NMEA_UART && has_portapack)) {
      settings->nmea_out = NMEA_USB;
    }
    if ( settings->gdl90 == GDL90_BLUETOOTH  ||
         settings->gdl90 == GDL90_UDP        ||
        (settings->gdl90 == GDL90_UART && has_portapack)) {
      settings->gdl90 = GDL90_USB;
    }
    if ( settings->d1090 == D1090_BLUETOOTH  ||
         settings->d1090 == D1090_UDP        ||
        (settings->d1090 == D1090_UART && has_portapack)) {
      settings->d1090 = D1090_USB;
    }
  }
}

static byte LPC43_Display_setup()
{
  byte rval = DISPLAY_NONE;

  rval = has_portapack ? DISPLAY_TFT_PORTAPACK : rval;

#if defined(USE_OLED)
  if (rval != DISPLAY_TFT_PORTAPACK) {
    rval = OLED_setup();
  }
#endif /* USE_OLED */

  return rval;
}

static void LPC43_WDT_setup()
{
  reset_driver_initialize();
#if SOFTRF_USB_FW_VERSION > 0x0101 /* not active until release */
  platform_watchdog_enable(16000000UL); /* approx. 6 seconds */
  wdt_is_active = true;
#endif
}

static void LPC43_Button_loop()
{
  if (dfu_button_state()) {
    if (!prev_dfu_state) {
      dfu_time_marker = millis();
      prev_dfu_state = true;
    } else {
      if (dfu_time_marker && !is_dfu_click &&
          millis() - dfu_time_marker > DFU_CLICK_DELAY) {
        is_dfu_click = true;
      }
      if (dfu_time_marker &&
          millis() - dfu_time_marker > DFU_LONGPRESS_DELAY) {

        On_Button_LongPress();

//      Serial.println(F("This will never be printed."));
      }
    }
  } else {
    if (prev_dfu_state) {
      if (is_dfu_click) {

        On_Button_Click();

        is_dfu_click = false;
      }
      dfu_time_marker = 0;
      prev_dfu_state = false;
    }
  }
}

static void LPC43_USB_setup()
{
  TinyUSB_Device_Init(0);

  USBDevice.setID(LPC43_Vendor_Id, LPC43_Device_Id);
  USBDevice.setManufacturerDescriptor(LPC43_Device_Manufacturer);
  USBDevice.setProductDescriptor(LPC43_Device_Model);
  USBDevice.setDeviceVersion(LPC43_Device_Version);
}

static void LPC43_USB_loop()
{
  USBDevice.task();
  Serial.flush();

  if (USBSerial && !usb_led_state) {
    led_on(LED1);
    usb_led_state = true;
  } else if (!USBSerial && usb_led_state) {
    led_off(LED1);
    usb_led_state = false;
  }
}
